<resources>
    <string name="app_name">Gamers Hub</string>
    <string name="gamers_hub">Gamers Hub</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <string name="getCurrentTimeAsiaKolkata">https://timeapi.io/api/Time/current/zone?timeZone=Asia/Kolkata</string>


    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.nitish.gamershub</string>

    <string name="instrcutions">
        <br> Once You play the Game , the game will be offline for a while</br>
        <br>
        If the blank screen appears then comeback and restart the game with proper internet connection
        </br>
    </string>
    <string name="instrcutions2">
    </string>
    <string name="fb_test_inter">
        IMG_16_9_APP_INSTALL#743235656527656_743236059860949
    </string>
    <string name="fb_inter_karan">
       743235656527656_743236059860949
    </string>
    <string name="fb_inter_nitish">
       804901923716848_804910687049305
    </string>
    <string name="fb_test_reward">
        PLAYABLE#743235656527656_744747136376508
    </string>
    <string name="fb_reward_karan">
      743235656527656_744747136376508
    </string>
    <string name="fb_reward_nitish">
      804901923716848_804909593716081
    </string>

    // production live ads
    <!--    <string name="admob_inter">-->
    <!--                ca-app-pub-5584279718709862/1146858340-->
    <!--            </string>-->
    <!--    <string name="admob_banner">-->
    <!--                ca-app-pub-5584279718709862/7324226210-->
    <!--            </string>-->
    <!--    <string name="admob_reward">-->
    <!--                ca-app-pub-5584279718709862/4033478773-->
    <!--            </string>-->


    // test2 ads

    <string name="admob_inter">
            ca-app-pub-3940256099942544/1033173712
        </string>
    <string name="admob_banner">
            ca-app-pub-3940256099942544/6300978111
        </string>
    <string name="admob_reward">
            	ca-app-pub-3940256099942544/5224354917
        </string>


    <string name="admob_test_reward">
    ca-app-pub-3940256099942544/5224354917
     </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="dbGitUrl">https://nitish647.github.io/</string>

    <string name="googleAccountWebClientID">1058533668645-87ngkdds23afa0ehib47oe2e5ro1r6pk.apps.googleusercontent.com</string>


    <string name="earned_reward_message">
       Congratulations , You have earned
    </string>
    <string name="redeemRequestMessage">Most transaction get completed in 6 hours but , it can take up to 24 to 72 hours to complete a transaction request .</string>

    <string name="suspensionMessage">Your account has been temporarily been suspended due to the wrong activities detected by us on your account</string>
    <string name="contact_mail">
       gamershub@dr.com
    </string>


    <!--                 Rewards bottom dialog               -->


    <string name="watch_an_Ad_and_Earn">Watch an Ad and Earn</string>
    <string name="daily_Bonus">Daily Bonus</string>
    <string name="daily">Daily</string>
    <string name="watch">Watch</string>
    <string name="watched">Watched</string>

    <string name="rewards">Rewards</string>


    <!--    Dialog    -->

    <string name="this_is_a_test_snackBar">This is a test SnackBar</string>


    <string name="request_raised_successfully">Request Raised successfully</string>
    <string name="congratulations_redeem_request_generated_for">Congratulations , Redeem request generated for ₹</string>

    <!--    Home Page    -->


    <string name="a_new_update_of_the_app_has_been_released_please_update">"A new update of the app has been released , please update "</string>
    <string name="pending_update">Pending Update</string>
    <string name="update">Update</string>
    <string name="search_games">Search Games</string>

    <string name="confirmation">Confirmation</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="log_out">LogOut</string>

    <string name="view_all">View All</string>
    <string name="favourites">Favourites</string>
    <string name="no_favourites_yet">No favourites yet</string>
    <string name="recently_played">Recently Played</string>
    <string name="all_games">All games</string>
    <string name="no_recently_played_game">No game played yet</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_from_favourites">Removed from favourites</string>


    <!--    Redeem Page    -->
    <string name="enter_a_valid_upi_id">Enter a Valid upi id</string>
    <string name="enter_a_valid_number">Enter a Valid Number</string>
    <string name="network_is_not_good">"Network is not good "</string>
    <string name="not_enough_funds_to_redeem">"Not enough funds to redeem "</string>
    <string name="added_the_data">Added the data</string>
    <!--    Game Details Activity    -->
    <string name="do_you_want_to_exit_the_game">Do you want to exit the game?</string>

    <string name="notification_permission_message">Please allow the notifications from the settings screen to get the latest updates. Click Yes to go to the settings.</string>

    <!--    Game Details Fragment    -->

    <string name="your_have_reached_the_daily_reward_limit_of">"Your have reached the daily reward limit of "</string>
    <string name="games_come_back_tomorrow_to_get_more_rewards">" games ,come back tomorrow to get more rewards"</string>
    <string name="play_this_game_for">" Play this game for "</string>
    <string name="minutes_to_get_rewarded">" Minutes to get rewarded "</string>
    <string name="game_played_reward_left">"   \n(Game played reward left "</string>
    <string name="send">Send</string>
    <string name="do_you_want_to_report_this_game">"Do you want to report this game? "</string>
    <string name="issue_in_the_game">"Issue in the game : "</string>
    <string name="play">Play</string>

    <string name="send_us_email">"Send us email "</string>
    <string name="game_description_sample">As you navigate through the vastness of the universe, uncover the mysteries of ancient artifacts and face formidable challenges. Upgrade your ship, forge alliances, and become the master of the galaxy in this immersive and visually stunning space exploration game.</string>

    <string name="something_went_wrong">"something went wrong "</string>

    <!--    Splash Screen-->
    <string name="internet_is_slow">Internet is slow…</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="change_in_default_time_detected_please_set_the_time_to_default_network_time">Change in default time detected , please set the time to default network time</string>
    <string name="okay">Okay</string>
    <string name="congratulations">Congratulations</string>


    <!--    Rewards Screen -->
    <string name="total_coins">Total Coins</string>
    <string name="transactions_history">Transactions History</string>
    <string name="daily_bonus">Daily Bonus</string>
    <string name="claim">Claim</string>
    <string name="claimed">Claimed</string>

    <string name="open">Open</string>
    <string name="redeem">Redeem</string>

    <!--    Dialog Screen -->
    <string name="warning">Warning</string>
    <string name="alert">Alert</string>
    <string name="connection_problem_please_check_your_internet_connection_and_try_again">Connection problem, please check your internet connection and try again</string>


    <!--    Category Screen -->
    <string name="no_favourites_added">No favourites added</string>
    <string name="no_games_here">No Games here</string>
    <string name="clear_list">Clear list</string>
    <string name="clear_list_warning">Are you sure to clear all the list of this category?</string>
    <string name="game_details">Game Details</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="welcome">Welcome</string>
    <string name="rate_us">Rate Us</string>
    <string name="faq">Faq</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About us</string>


</resources>