<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"

        tools:context=".view.rewards.activity.RedeemActivity">

        <LinearLayout
            android:id="@+id/appBarLayoutLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout

                android:id="@+id/appBarLayoutRelative"
                android:layout_width="match_parent"

                android:layout_height="@dimen/_50sdp"
                android:background="@color/gamers_hub_theme">

                <ImageView
                    android:id="@+id/backButton"


                    style="@style/backImageview"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp">

                </ImageView>

                <TextView

                    style="@style/extra_bold_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_toEndOf="@+id/backButton"
                    android:gravity="center_vertical"
                    android:text="@string/redeem"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textHeadingXXLarge">

                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:background="@color/gamers_hub_theme">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical">

                    <TextView
                        android:elevation="@dimen/cardview_default_radius"
                        android:id="@+id/redeemMessageText"
                        style="@style/regular_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/redeemRequestMessage"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textHeading">

                    </TextView>
                </LinearLayout>


            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/googleBannerAdView"
            android:layout_below="@+id/appBarLayoutLinear"
            android:layout_marginTop="@dimen/_minus25sdp"
            android:background="@drawable/top_round_corners"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/redeemRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </androidx.recyclerview.widget.RecyclerView>

                    <RelativeLayout
                        android:id="@+id/noTransactionRelative"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="20sp"
                        android:background="@drawable/round_corners"
                        android:elevation="@dimen/cardview_default_elevation"
                        android:padding="10dp"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="No Redeem Items "
                            android:textSize="20sp">

                        </TextView>

                    </RelativeLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <com.google.android.gms.ads.AdView

            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/googleBannerAdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"

            android:background="@color/fui_transparent"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner">

        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</layout>