<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.homePage.activity.CategoryActivity">


        <LinearLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_round_corners"
            android:backgroundTint="@color/gamers_hub_theme"
            android:orientation="vertical">


            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/back_icon2">

                </ImageView>

                <TextView
                    android:id="@+id/categoryNameTextview"
                    style="@style/bold_arima_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textHeadingXXLarge"
                    tools:text="Category">

                </TextView>
            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/round_corner_10dp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp">

                <EditText
                    android:id="@+id/searchEdittext"
                    style="@style/regular_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/dismissButtonContainer"
                    android:background="@color/white"
                    android:hint="@string/search_games"
                    android:textColor="@color/black">

                </EditText>

                <LinearLayout
                    android:id="@+id/dismissButtonContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/crossButton"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:src="@drawable/cross_dismiss2"
                        android:visibility="invisible"
                        app:tint="@color/greyPrimary"
                        tools:visibility="invisible">

                    </ImageView>

                    <ImageView
                        android:id="@+id/searchButton"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/search_icon_white"
                        app:tint="@color/gamers_hub_theme">

                    </ImageView>
                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/googleBannerAdView"
            android:layout_below="@+id/appBarLayout"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/noCategoryRelative"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="@dimen/_8sdp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:background="@drawable/round_corners"
                    android:backgroundTint="@color/dark_2"
                    android:elevation="@dimen/cardview_default_radius"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_20sdp">


                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        ads:lottie_rawRes="@raw/lottie_game_not_found_2"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true">

                    </com.airbnb.lottie.LottieAnimationView>

                    <TextView
                        style="@style/bold_arima_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/no_games_here"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textHeadingXXXLarge">

                    </TextView>
                </LinearLayout>


            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="4"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_5sdp"
                tools:listitem="@layout/rv_items_game_list_layout"
                android:layout_alignParentTop="true">

            </androidx.recyclerview.widget.RecyclerView>

            <RelativeLayout


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="@dimen/_50sdp"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_5sdp">

                <Button
                    android:id="@+id/clearListButton"
                    style="@style/semi_bold_textview"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/round_corners"
                    android:backgroundTint="@color/yellow_material2"
                    android:elevation="@dimen/cardview_default_radius"
                    android:gravity="center"
                    android:text="@string/clear_list"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textTitleLarge">

                </Button>
            </RelativeLayout>

        </RelativeLayout>

        <com.google.android.gms.ads.AdView


            android:id="@+id/googleBannerAdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_banner">

        </com.google.android.gms.ads.AdView>

    </RelativeLayout>
</layout>