<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="view.gamePlay.GameDetailsFragment">

        <LinearLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gameDetails_screen_color">


            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backButton"
                    style="@style/backImageview"
                    android:src="@drawable/back_icon2">

                </ImageView>

                <TextView
                    style="@style/semi_bold_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/game_details"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textHeadingXXLarge">

                </TextView>

            </androidx.appcompat.widget.Toolbar>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottomRelative"
            android:layout_below="@+id/appBarLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout

                    android:id="@+id/gameImageContainerRelative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_round_corners"
                    android:backgroundTint="@color/gameDetails_screen_color"
                    android:elevation="@dimen/cardview_default_radius"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_10sdp">


                    <com.google.android.material.imageview.ShapeableImageView

                        android:id="@+id/gameImageImageVIew"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:elevation="@dimen/cardview_default_radius"
                        android:scaleType="fitXY"
                        android:src="@drawable/gamers_hub_icon23"
                        app:shapeAppearance="@style/ShapeAppearanceOverlay.RoundCorners_10">

                    </com.google.android.material.imageview.ShapeableImageView>


                    <TextView
                        android:id="@+id/gameNameTextview"
                        style="@style/bold_arima_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_toEndOf="@+id/gameImageImageVIew"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textHeading"
                        tools:text="Ninja Action">

                    </TextView>

                    <TextView

                        android:id="@+id/gameCategoryTextview"
                        style="@style/semi_bold_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/gameNameTextview"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@+id/gameImageImageVIew"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textHeading"
                        tools:text="Action">

                    </TextView>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/gameCategoryTextview"
                        android:layout_marginStart="@dimen/_8sdp"

                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_toEndOf="@+id/gameImageImageVIew"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/favButton"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/fav_of2">

                        </ImageView>

                        <ImageView
                            android:id="@+id/reportButton"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:src="@drawable/report_icon">

                        </ImageView>
                    </LinearLayout>


                    <Button
                        android:id="@+id/playButton"
                        style="@style/extra_bold_textview"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_below="@+id/gameImageImageVIew"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/round_corners"
                        android:backgroundTint="@color/gamers_hub_theme"
                        android:elevation="@dimen/cardview_default_radius"
                        android:text="@string/play"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textHeadingXLarge1">

                    </Button>


                </RelativeLayout>

                <TextView
                    android:id="@+id/gameDescTextview"
                    style="@style/regular_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/game_description_sample"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textNormal">

                </TextView>
            </LinearLayout>


        </ScrollView>

        <RelativeLayout
            android:id="@+id/bottomRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_20sdp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/gamers_hub_theme"
                android:elevation="@dimen/cardview_default_elevation"
                android:gravity="center"
                android:minHeight="@dimen/_40sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/gamePlayTimeTextview"
                    style="@style/semi_bold_textview"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/gameCoinImage"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textNormal"
                    tools:text="Play this game for 60 seconds to get rewarded">

                </TextView>

                <ImageView
                    android:id="@+id/gameCoinImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/indian_coin">

                </ImageView>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</layout>